2007-01-06  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/bj10vh.xml, driver/bj10v.xml, driver/bj10.xml,
	  driver/bjc800j.xml, driver/bjc880j.xml, driver/chp2200.xml,
	  driver/dj505j.xml, driver/drv_z42.xml, driver/eplaser-jp.xml,
	  driver/eplaser.xml, driver/escpage.xml, driver/fmlbp.xml,
	  driver/fmpr.xml, driver/gdi.xml, driver/gimp-print.xml,
	  driver/gutenprint.xml, driver/hl1250.xml, driver/jj100.xml,
	  driver/lbp310.xml, driver/lbp320.xml, driver/lips2p.xml,
	  driver/lips4v.xml, driver/lips4.xml, driver/lj4dithp.xml,
	  driver/lm1100.xml, driver/lp2000.xml, driver/lxm3200m.xml,
	  driver/lxm3200p.xml, driver/lxm3200-tweaked.xml,
	  driver/md1xMono.xml, driver/md50Eco.xml, driver/md50Mono.xml,
	  driver/md5k.xml, driver/mj500c.xml, driver/mj6000c.xml,
	  driver/mj700v2c.xml, driver/mj8000c.xml, driver/ml600.xml,
	  driver/npdl.xml, driver/oki4drv.xml, driver/pbmtozjs.xml,
	  driver/pcl3.xml, driver/picty180.xml, driver/Postscript.xml,
	  driver/pr150.xml, driver/pr201.xml, driver/rastertokmXXXXdl.xml,
	  driver/rpdl.xml, driver/sharp.upp.xml, driver/sipixa6.upp.xml,
	  printer/Alps-MD-1000.xml, printer/Alps-MD-5000.xml,
	  printer/Alps-MD-5500.xml, printer/Apollo-P-2200.xml,
	  printer/Apollo-P-2250.xml, printer/Brother-HL-1240.xml,
	  printer/Canon-BJ-30.xml, printer/Canon-BJC-50.xml,
	  printer/Canon-BJC-55.xml, printer/Canon-BJC-7004.xml,
	  printer/Canon-BJC-80.xml, printer/Canon-BJC-85.xml,
	  printer/Epson-EPL-5500W.xml, printer/Epson-Stylus_Color_600.xml,
	  printer/Epson-Stylus_CX3100.xml,
	  printer/Epson-Stylus_CX3200.xml,
	  printer/Epson-Stylus_CX5200.xml, printer/Gestetner-10512.xml,
	  printer/Gestetner-2212.xml, printer/Gestetner-2712.xml,
	  printer/Gestetner-3212.xml, printer/Gestetner-3502.xml,
	  printer/Gestetner-3532_4235g.xml, printer/Gestetner-4502.xml,
	  printer/Gestetner-4532_4245g.xml, printer/Gestetner-6002.xml,
	  printer/Gestetner-7502.xml, printer/Gestetner-9002.xml,