@@ -1,0 +1,72 @@
+<driver id="driver/pxljr">
+ <name>pxljr</name>
+ <url>http://hp-pxl-jetready.sourceforge.net/</url>
+ <execution>
+  <filter />
+  <prototype></prototype>
+ </execution>
+ <comments>
+  <en>
+
+    In contrary to HP&apos;s HPIJS this driver contributed by Hin-Tak
+    Leung (also author of the drivers for Epson&apos;s EPL "L" laser
+    printers) supports all printout qualities which the Windos driver
+    provides for the HP Color LaserJet 35xx/36xx. The development of
+    this driver is not supported by HP, it is an independent
+    project.&lt;p&gt;
+
+    Cited from the driver&apos; home page:&lt;p&gt;
+
+    [...]&lt;p&gt;
+    
+    &lt;i&gt;PXLJR is an IJS-based driver for the HP JetReady 4.x
+    protocol printer family (Color Laserjet 3500 and 3550) under linux
+    and other unix-like systems. This effort is not endorsed by nor
+    affiliated with HP.&lt;p&gt;
+
+    It is licensed under the terms of GNU General Public
+    License.&lt;/i&gt;&lt;p&gt;
+
+    [...]&lt;p&gt;
+
+    &lt;i&gt;HPIJS/HPLIP also supports these two printers. Why are you
+    "reinventing the wheel"?&lt;p&gt;
+
+    HPIJS provides 2 printing modes:
+    one color and one gray, corresponding to the
+    max-compression/worst-quality setting of the HP driver under
+    Windows. There are two more settings for better quality in the
+    Windows driver. PXLJR provides these two additional settings, so
+    there are a total of 6 printing modes. Also, the max-compression
+    gray mode of PXLJR is 1.5 to 3 times faster.&lt;p&gt;
+
+    One the other hand, PXLJR doesn't provide a full set of facilities
+    like printer status report, etc. For other bells and whistles,
+    please use HPLIP's toolbox instead. There is no conflict
+    installing both HPIJS and PXLJR simultaneously.&lt;p&gt;
+
+    As the PPD file is available on the driver&apos;s web site, we
+    will not provide PPD files here at FSG OpenPrinting. Note that
+    there is currently only one PPD file, which serves for all
+    supported printer models. The printers only differ in print speed
+    and presence of an ethernet interface.&lt;p&gt;
+
+    For extra functions like toner level and status checks use the
+    CUPS backend of HPLIP ("&lt;tt&gt;ḧp:/...&lt;/tt&gt;" URI) and the
+    "&lt;tt&gt;hp-toolbox&lt;/tt&gt;". There is no problem to use
+    HPLIP together with this driver.&lt;p&gt;
+
+  </en>
+ </comments>
+ <printers>
+  <printer>
+   <id>printer/HP-Color_LaserJet_3500</id>
+  </printer>
+  <printer>
+   <id>printer/HP-Color_LaserJet_3550</id>
+  </printer>
+  <printer>
+   <id>printer/HP-Color_LaserJet_3600</id>
+  </printer>
+ </printers>
+</driver>
