@@ -24,8 +24,8 @@
   </lang>
   <autodetect>
   </autodetect>
-  <functionality>B</functionality>
-  <driver>hpijs</driver>
+  <functionality>A</functionality>
+  <driver>pxljr</driver>
   <!--verified-->
   <!--no "contrib_url"-->
   <comments>
@@ -34,12 +34,12 @@
     Low-cost, reliable, Narrow format paper sizes. In-line color
     printing.&lt;p&gt;
 
-    For basic printing functionality use the &lt;a 
-    href=&quot;http://hplip.sf.net/&quot;&gt;HPIJS 
-    driver &lt;/a&gt;. For advanced functionality such
-    as printer status and maintenance features, use the
-    &lt;a href=&quot;http://hplip.sf.net/&quot;&gt;
-    HPLIP driver&lt;/a&gt; (which includes HPIJS). &lt;p&gt;
+    For basic printing functionality use the &lt;a
+    href=&quot;http://hp-pxl-jetready.sourceforge.net/&quot;&gt;"pxljr"
+    driver &lt;/a&gt;. For advanced functionality such as printer
+    status and maintenance features, use the &lt;a
+    href=&quot;http://hplip.sf.net/&quot;&gt; HPLIP software&lt;/a&gt;
+    together with "pxljr". &lt;p&gt;
 
     Various flavors are available, with networking, duplexer, etc.&lt;p&gt;
 
