@@ -1,3 +1,9 @@
+2007-01-07  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/pxljr.xml, printer/HP-Color_LaserJet_3500.xml,
+	  printer/HP-Color_LaserJet_3550.xml,
+	  printer/HP-Color_LaserJet_3600.xml: Added new driver "pxljr".
+
 2007-01-06  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/bj10vh.xml, driver/bj10v.xml, driver/bj10.xml,
